今天完成了

--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
         <li><a href="bmi.php">BMI計算-表單傳值練習</a></li>
         <li><a href="account.php">登入檢查</a></li>
         <li><a href="calender.php">萬年曆</a></li>
-        <li><a href="reg_form.php">註冊表單</reg_form></a></li>
+        <li><a href="reg_form.php">註冊表單</a></li>
+        <li><a href="login2.php">登入表單</a></li>
         <li><a href=""></a></li>
     </ul>
 
